k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  namespace: app-4-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dotnet-app-4
  template:
    metadata:
      labels:
        app: dotnet-app-4
    spec:
      containers:
        - name: dotnet-app-4
          image: dokkaushik/dotnet-app-4:b27b2d8394ea298497f6db6fa436bad0a5274988
          ports:
            - containerPort: 5000
