k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: app-4-dev
spec:
  type: NodePort
  selector:
    app: angular-app-4
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      #nodePort: 30084
  type: NodePort
  externalTrafficPolicy: Cluster
  sessionAffinity: None
